--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 }
 
 body {
-	background-color: #3B3B98;
-	color: #fff;
+	background-color: #8dd354;
+	color: rgb(158, 50, 50);
 	display: flex;
 	font-family: 'Muli', sans-serif;
 	flex-direction: column;
@@ -30,15 +30,15 @@ input[type=checkbox] {
 }
 
 .container {
-	background-color: #23235B;
-	box-shadow: 0px 2px 10px rgba(255, 255, 255, 0.2);
+	background-color: #a0317b;
+	box-shadow: 0px 2px 10px rgba(150, 50, 50, 0.2);
 	padding: 20px;
 	width: 350px;
 	max-width: 100%;
 }
 
 .result-container {
-	background-color: rgba(0, 0, 0, 0.4);
+	background-color: rgba(247, 48, 48, 0.4);
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
@@ -70,7 +70,7 @@ input[type=checkbox] {
 	cursor: pointer;
 	font-size: 16px;
 	padding: 8px 12px;
-	background-color: #3B3B98;
+	background-color: #3ea32a;
 }
 
 .btn-large {
@@ -105,10 +105,10 @@ input[type=checkbox] {
 }
 
 .social-panel {	
-	background-color: #fff;
+	background-color: rgb(129, 30, 30);
 	border-radius: 16px;
-	box-shadow: 0 16px 31px -17px rgba(0,31,97,0.6);
-	border: 5px solid #001F61;
+	box-shadow: 0 16px 31px -17px rgba(62, 75, 104, 0.6);
+	border: 5px solid #74a121;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -122,7 +122,7 @@ input[type=checkbox] {
 
 .social-panel button.close-btn {
 	border: 0;
-	color: #97A5CE;
+	color: #4c8baf;
 	cursor: pointer;
 	font-size: 20px;
 	position: absolute;
@@ -135,9 +135,9 @@ input[type=checkbox] {
 }
 
 .social-panel p {
-	background-color: #001F61;
+	background-color: #5f6e91;
 	border-radius: 0 0 10px 10px;
-	color: #fff;
+	color: rgb(151, 22, 22);
 	font-size: 14px;
 	line-height: 18px;
 	padding: 2px 17px 6px;
